[package]
name = "lobsters-retrawled"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features =["derive"] }
futures-core = "0.3.0"
futures-util = "0.3.0"
mysql_async = "0.33.0"
mysql_common = { version = "0.31", features = ["chrono"] }
thiserror = "1.0"
tower-service = "0.3"
trawler = "0.11.0-alpha.7"

# should we just use the official OSS versions??
postgres = {  git = "https://github.com/readysettech/rust-postgres.git"}
postgres-native-tls = {  git = "https://github.com/readysettech/rust-postgres.git"}
postgres-protocol = {  git = "https://github.com/readysettech/rust-postgres.git"}
postgres-types = {  git = "https://github.com/readysettech/rust-postgres.git"}
tokio-postgres = {  git = "https://github.com/readysettech/rust-postgres.git", features = ["runtime", "with-chrono-0_4"]}

deadpool = "0.10"
deadpool-postgres = "0.11"
