[package]
name = "lobsters-retrawled"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features =["derive"] }
futures-core = "0.3.0"
futures-util = "0.3.0"

metrics = "0.23"
metrics-util = "0.17"
metrics-exporter-prometheus = "0.15"

mysql_async = "0.34"
mysql_common = { version = "0.32", features = ["chrono"] }
trawler = { git = "https://github.com/jasobrown-rs/trawler.git" }

